--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.7",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
